spacing fix

--- a/digital.css
+++ b/digital.css
@@ -159,7 +159,11 @@ button{
     background-size: cover;
 }
 
-
+#spotlight-square:before {
+    content: url(images/btn_spotlight_hover.png);
+    visibility:hidden;
+    display: none;
+}
 
 #spotlight-square:hover{
     background-image: url(images/btn_spotlight_hover.png);
@@ -175,7 +179,11 @@ button{
     background-size: cover;
 }
 
-
+#paintla-square:before {
+    content: url(images/btn_paintla_hover.png);
+    visibility:hidden;
+    display: none;
+}
 
 #paintla-square:hover{
     background-image: url(images/btn_paintla_hover.png);
@@ -191,7 +199,11 @@ button{
     background-size: cover;
 }
 
-
+#dpaintings-square:before {
+    content: url(images/btn_dpaintings_hover.png);
+    visibility:hidden;
+    display: none;
+}
 
 #dpaintings-square:hover{
     background-image: url(images/btn_dpaintings_hover.png);
@@ -207,7 +219,11 @@ button{
     background-size: cover;
 }
 
-
+#waves-square:before {
+    content: url(images/btn_waves_hover.png);
+    visibility:hidden;
+    display: none;
+}
 
 #waves-square:hover{
     background-image: url(images/btn_waves_hover.png);
@@ -223,7 +239,11 @@ button{
     background-size: cover;
 }
 
-
+#nocturnal-square:before {
+    content: url(images/btn_nocturnal_hover.png);
+    visibility:hidden;
+    display: none;
+}
 
 #nocturnal-square:hover{
     background-image: url(images/btn_nocturnal_hover.png);
@@ -239,7 +259,11 @@ button{
     background-size: cover;
 }
 
-
+#portfolio-square:before {
+    content: url(images/btn_portfolio_hover.png);
+    visibility:hidden;
+    display: none;
+}
 
 #portfolio-square:hover{
     background-image: url(images/btn_portfolio_hover.png);
